# realtime-fraud-engine

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.agent/rules/: architecture.md
.github/workflows/: main.yml
configs/: model_config.yaml  redis_config.yaml
docker/: docker-compose.yml
docs/: DEVELOPMENT.md
logs/: shadow_predictions.jsonl
models/: fraud_model.pkl  threshold.json
notebook/: README.md  credit-card-fraud-detection.ipynb  credit-card-fraud-detection.md
notebook/.ipynb_checkpoints/: credit-card-fraud-detection-checkpoint.ipynb
notebook/dataset/: download.py
scripts/: demo_phase1.py  verify_phase1.py
src/: explainability.py
src/api/: __init__.py  config.py  logger.py  main.py  schemas.py
src/data/: ingest.py
src/features/: __init__.py  constants.py  store.py
src/frontend/: app.py
src/models/: metrics.py  pipeline.py  train.py
tests/: conftest.py  test_explainability.py
tests/test_api/: __init__.py  test_inference.py
tests/test_data/: test_ingest.py
tests/test_features/: test_store.py
tests/test_models/: __init__.py  test_metrics.py  test_pipeline.py
